--- a/login.html
+++ b/login.html
@@ -47,16 +47,16 @@
             <div class="mb-6">
                 <label for="password" class="block text-gray-700 text-sm font-medium mb-2">Password</label>
                 <input type="password" id="password" name="password" class="form-input" required>
-		<p class="text-center text-sm text-gray-600 mt-2">
-                <a href="/forgot_password" class="text-indigo-600 hover:underline">Forgot Password?</a>
-                </p>
             </div>
+            <!-- Moved "Forgot Password?" link here, above the button -->
+            <p class="text-left text-sm text-gray-600 mb-4">
+                <a href="/forgot_password" class="text-indigo-600 hover:underline">Forgot Password?</a>
+            </p>
             <button type="submit" class="form-button">Login</button>
         </form>
         <p class="text-center text-sm text-gray-600 mt-4">
             Don't have an account? <a href="/signup" class="text-indigo-600 hover:underline">Sign Up</a>
         </p>
-        
     </div>
 
     <script>
